css/style.css
/* ... */
	#bootstrapOverrides .navbar-default .navbar-toggle:focus{
	  background-color: #000;
	}

	#bootstrapOverrides .navbar-default .navbar-toggle:focus .icon-bar {
		background-color: #E1B62F;
	}

	.dropdown-menu i {
	  font-size: 0.85em;
	}

/*Parallax Sections*/

.parallaxParent{
	height: 100vh;
	overflow: hidden;
}
.parallaxParent > *{
	height: 200%;
	position: relative;
	top: -100%;
}

.one{
	background-image: url('../images/Para1.jpg');
}

	.welcome{
		min-height: 8em;
		width: 50vw;
		bottom: 20vh;
		left: 25vw;
		background-color: rgba(251, 187, 80, 0.92);
		border-radius: 5px;
		position: absolute;
		padding-top: 2em;
		padding-bottom: 3em;
		border: 3px solid #CE0B4D;
	}

	.welcome{
		text-shadow: 2px 2px 5px #971E51;
	}

	.arrow{
		position: relative;
	}

.infoTab{
	background-color: #000;
}

	#bootstrapOverrides .infoTab h2{
		margin-top: 0.83em;
		margin-bottom: 0.83em;
	}

	#about, #background, #contact{
		padding-top: 5vh;
		padding-bottom: 5vh;
		overflow: auto;
		position: relative;
		width: 90vw;
		left: 5vw;
	}

	#about h1, #background h1, #contact h1{
		margin: 0;
		margin-bottom: 10px;
	}

	.me{
		width: 20vw;
	    float: left;
	    border-radius: 5px;
	    margin: 5px;
	    margin-right: 10px;
	}

.sectionContent{
	position: relative;
	bottom: 100vh;
    width: 100vw;
    margin: auto;
    overflow: visible;
    height: 0vw;
}

	.textArea{
		position: absolute;
	    top: 25vh;
	    border: .5vw solid white;
	    max-height: 60vh;
	    width: 70vw;
	    left: 15vw;
	    padding: 5vw;
	    background-color: rgba(255, 255, 255, 0.5);
	}

	.textArea p{
		font-size: 2em;
		text-shadow: 2px 2px 1px #000;
	}

.two{
	background-image: url('../images/Para2.jpg');
}

.three{
	background-image: url('../images/Para3.jpg');
	overflow: auto;
}

.four{
	background-image: url('../images/Para4.jpg');
}

	.project{
		height: 30vh;
	}

	#submitted{
		visibility: hidden;
		font-size: 2em;
		height: 0;
		overflow: visible;
	    width: 80vw;
	    position: relative;
	    left: 5vw;
	}

	#contactForm{
		position: relative;
		width: 90vw;
		height: calc(4em + 130px);
		font-family: 'Amatic SC', cursive;
		letter-spacing: 2px;
		display: inline-block;
	}

		.contactForm{
			position: absolute;
			top: 0;
			width: 90vw;
			height: 115px;
		}

		.contactLeft{
			position: absolute;
			left: 0;
			width: 33vw;
			height: 115px;
			margin-right: 50px;
		}

		.contactRight{
			position: absolute;
			right: 0;
			width: 55vw;
			height: 115px;
		}

		.ss-form-question{
			/*Prompt and form.*/
			margin-bottom: 25px;
		}

		.ss-q-item-label{
			/*question prompt.*/
			font-size: 1.3em;
			float: left;
		}

		.ss-required-asterisk{
			color: red;
		}

		input{
			width: 160px;
			margin-left: 10px;
			border: none;
		}

		#bootstrapOverrides input, #bootstrapOverrides textarea{
			float: right;
			border-radius: 5px;
			font-family: 'Slabo 27px', serif;
			color: #000;
			padding-left: 5px;
		}

		textarea{
			width: 80%;
			resize: none;
			height: 115px;
		}

		#navigation-table{
			/*submit button.*/
			position: relative;
			width: 10vw;
			min-width: 40px;
			left: 40vw;
			margin-top: 135px;
		}

		#bootstrapOverrides #ss-submit{
			/*submit button.*/
			font-family: 'Amatic SC', cursive;
			letter-spacing: 2px;
			width: 100%;
			background-color: #929292;
			color: #000;
			border: 1px solid #000;
			font-size: 1em;
			margin-left: 0;
			pointer-events: none;
		}

		.instructions{
			position: absolute;
			bottom: 2vh;
			left: 10vw;
			width: 70vw;
			font-family: 'Amatic SC', cursive;
			font-size: 1.3em;
			letter-spacing: 2px;
		}

.five{
	background-image: url('../images/Para5.jpg');
}

	.infoIcon{
		width: 24%;
		display: inline-block;
		text-shadow: 3px 3px 3px #000;
		font-size: 2.5em;
		position: relative;
	    top: 30vh;
		font-family: 'Amatic SC', cursive;
	}

	.infoIcon i{
		font-size: 2.5em;
	}

	.projectSlides{
		position: relative;
		height: 90vh;
		width: 75vw;
		left: 12.5vw;
		top: 5vh;
		background-color: rgba(0, 0, 0, 0.8);
		border-radius: 3px;
	}

	.slider{
		position: absolute;
		width: auto;
	}

		.slide{
			display: none;
			max-height: 80vh;
			width: 75vw;
			position: relative;
			text-align: center;
			padding-top: 5vh;
		}

			.slide img{
				height: auto;
				max-height: 70vh;
				max-width: 70vw;
				border-radius: 3px;
				position: relative;
			}

			.slide p{
				position: relative;
				top: 1vh;
				height: 4vh;
			}

		.active-slide {
		    display: block;
		}

		.slider-nav{
			position: absolute;
			bottom: 0;
			height: 10vh;
			width: 50vw;
			left: 12.5vw;
		}

			.arrow-prev {
				margin-right: 1vw;
				display: inline-block;
				vertical-align: top;
				font-size: 3vh;
			}

			.arrow-next {
				margin-left: 1vw;
				display: inline-block;
				vertical-align: top;
				font-size: 3vh;
			}

			.slider-dots {
				list-style: none;
				display: inline-block;
				padding-left: 0;
				position: relative;
				bottom: 2.5vh;
			}

				.slider-dots li {
					color: #fff;
					display: inline;
					font-size: 10vh;
					margin: 10px;
				}

				.slider-dots li.active-dot {
					color: #E9674B;
				}




/*Projects Page*/
.projects{
	height: calc(100vh - 50px);
	width: 325vw;
	background-color: #000;
	background-image: url('../images/projects.png');
	overflow-x: scroll;
	overflow-y: hidden;
	margin-top: 50px;
}

.projectsNav, #bootstrapOverrides .navbar{
	width: 100vw;
	position: fixed;
	top: 0;
	height: 50px;
	margin: 0;
}

#bootstrapOverrides .projectsNav .nav li{
	width: 16.5vw;
}

	.narrow-nav{
		display: none;
	}

.projectDetails{
	height: calc(100vh - 70px);
	width: 75vw;
	padding-left: 15vw;
	padding-top: 10px;
	overflow-y: scroll;
	float: left;
	margin-bottom: 10px;
}

#mismatch{
	margin-left: 5vw;
}

	.projectDetails img, .ttt{
		height: 36.3vw;
		width: 60vw;
		border-radius: 5px;
	}

	.mobile{
		display: none;
	}
/* ... */

